--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
   </head>
   <body>
     <h1>覺得厲害</h1>
+	
+	<audio controls>
+		<source src="horse.mp3" type="audio/mpeg">
+	</audio>
+	
+	<iframe width="420" height="315" src="https://www.youtube.com/embed/影片ID">
+	</iframe>
   </body>
 </html>
