--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         function playMusic(a) {
             let myAudio = document.createElement('audio'); //建立audio元件
-            myAudio.setAttribute("src", "mp3 list/" + a + ".mp3"); //src 音檔路徑，a為傳入的歌曲名稱
+            myAudio.setAttribute("src", "music/" + a + ".mp3"); //src 音檔路徑，a為傳入的歌曲名稱
             myAudio.setAttribute("controls", "controls"); //顯示撥放器
             bottom.appendChild(myAudio); //加入在id名稱為bottom的元件裡
             myAudio.play(); //播放音樂
@@ -136,6 +136,19 @@
         </ul>
         <div id="bottom"></div>
     </div>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
+  <title></title>
+</head>
+<body>
+  <h1>Listing /music</h1><!-- Custom Script (defered load, after dom ready) -->
+  <script>
+    $.getJSON('./music', data => {
+        console.log(data); 
+    });
+  </script>
+	
 </body>
 
 </html>
