--- a/index.html
+++ b/index.html
@@ -127,17 +127,6 @@
             音樂選單 <span id="random" title="隨機播放" onclick="randomPlay()">R</span>
         </div>
         <ul id="musicSources">
-            <li>01 旅路(夢中飛行)</li>
-            <li>02 流れ星</li>
-            <li>03 カプローニ(設計家の夢)</li>
-            <li>04 旅路(決意)</li>
-            <li>05 菜穂子(出会い)</li>
-			<li>06 避難</li>
-			<li>07 恩人</li>
-			<li>08 カプローニ(幻の巨大機)</li>
-			<li>09 ときめき</li>
-			<li>10 旅路(妹)</li>
-			<li>11 旅路(初出社)</li>
 			<li>001</li>
 			<li>002</li>
 			<li>003</li>
@@ -145,6 +134,21 @@
 			<li>005</li>
 			<li>006</li>
 			<li>007</li>
+			<li>Bruno Mars, Anderson .Paak - Leave The Door Open</li>
+			<li>Ed Sheeran - Bad Habits</li>
+			<li>Ed Sheeran - Shivers</li>
+			<li>Justin Bieber - Hold On</li>
+			<li>Justin Bieber - Peaches</li>
+			<li>Lil Nas X - MONTERO</li>
+			<li>Maroon 5 - Beautiful Mistakes</li>
+			<li>Olivia Rodrigo - deja vu</li>
+			<li>Olivia Rodrigo - good 4 u</li>
+			<li>Pink Sweat - At My Worst</li>
+			<li>Post Malone - Circles</li>
+			<li>The Kid LAROI, Justin Bieber - Stay</li>
+			<li>The Weeknd - Save Your Tears</li>
+			<li>[podcast] Crime Junkie MURDERED Janet Abaroa</li>
+			<li>[podcast] WTF with Marc Maron Podcast Episode 1281 Ridley Scott</li>
         </ul>
         <div id="bottom"></div>
     </div>
